@@ -1,3 +1,12 @@
+2007-07-04  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/base/matfunc.cpp, itpp/base/matfunc.h: Added repmat()
+	function for vectors
+
+	Matrin Senst provided a new repmat() implementation which
+	concatenates a multiple number of vectors. It extends the
+	functionality of recently added repmat() functions for matrices.
+
 2007-06-29  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* itpp/signal/resampling.h: Minor spelling fixes in documentation
